[package]
name = "csplib-macros"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Code generator for csplib."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
itertools = "0.10"
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"
quote = "1"